fix overlapping images by hiding the overflow

--- a/sass/web.magazin/modules/_standard-gallery.sass
+++ b/sass/web.magazin/modules/_standard-gallery.sass
@@ -15,6 +15,9 @@
             padding-left: 0
             padding-right: 30%
 
+    &__media-container
+        overflow: hidden
+
 .gallery__description
     margin-bottom: $compact
 
