--- a/sass/web.site/modules/_standard-gallery.sass
+++ b/sass/web.site/modules/_standard-gallery.sass
@@ -9,6 +9,9 @@
     +respond-min($break-desktop-min)
         padding: $medium $big $big
 
+    &__media-container
+        overflow: hidden
+
 .gallery__description
     p
         @extend .paragraph
